// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ErrorBoundary > Snapshot > matches snapshot with custom fallback 1`] = `
<div>
  Custom Fallback
</div>
`;

exports[`ErrorBoundary > Snapshot > matches snapshot with error state 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-slate-950 via-slate-900 to-slate-950 flex items-center justify-center p-4"
>
  <div
    class="max-w-2xl w-full"
    data-testid="card"
  >
    <div
      class="p-8 text-center"
      data-testid="cardcontent"
    >
      <svg
        class="w-16 h-16 text-red-400 mx-auto mb-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <h2
        class="text-2xl font-bold text-white mb-2"
      >
        出现错误
      </h2>
      <p
        class="text-slate-400 mb-6"
      >
        Snapshot error
      </p>
      <details
        class="mb-6 text-left"
      >
        <summary
          class="text-slate-400 cursor-pointer mb-2"
        >
          错误详情（开发模式）
        </summary>
        <pre
          class="text-xs text-slate-500 bg-slate-900 p-4 rounded overflow-auto max-h-64"
        >
          Error: Snapshot error
    at ThrowError (/Users/flw/non-standard-automation-pm/frontend/src/components/common/__tests__/ErrorBoundary.test.jsx:19:13)
    at Object.react_stack_bottom_frame (/Users/flw/non-standard-automation-pm/frontend/node_modules/.pnpm/react-dom@19.2.4_react@19.2.4/node_modules/react-dom/cjs/react-dom-client.development.js:25904:20)
    at renderWithHooks (/Users/flw/non-standard-automation-pm/frontend/node_modules/.pnpm/react-dom@19.2.4_react@19.2.4/node_modules/react-dom/cjs/react-dom-client.development.js:7662:22)
    at updateFunctionComponent (/Users/flw/non-standard-automation-pm/frontend/node_modules/.pnpm/react-dom@19.2.4_react@19.2.4/node_modules/react-dom/cjs/react-dom-client.development.js:10166:19)
    at beginWork (/Users/flw/non-standard-automation-pm/frontend/node_modules/.pnpm/react-dom@19.2.4_react@19.2.4/node_modules/react-dom/cjs/react-dom-client.development.js:11778:18)
    at runWithFiberInDEV (/Users/flw/non-standard-automation-pm/frontend/node_modules/.pnpm/react-dom@19.2.4_react@19.2.4/node_modules/react-dom/cjs/react-dom-client.development.js:874:13)
    at performUnitOfWork (/Users/flw/non-standard-automation-pm/frontend/node_modules/.pnpm/react-dom@19.2.4_react@19.2.4/node_modules/react-dom/cjs/react-dom-client.development.js:17641:22)
    at workLoopSync (/Users/flw/non-standard-automation-pm/frontend/node_modules/.pnpm/react-dom@19.2.4_react@19.2.4/node_modules/react-dom/cjs/react-dom-client.development.js:17469:41)
    at renderRootSync (/Users/flw/non-standard-automation-pm/frontend/node_modules/.pnpm/react-dom@19.2.4_react@19.2.4/node_modules/react-dom/cjs/react-dom-client.development.js:17450:11)
    at performWorkOnRoot (/Users/flw/non-standard-automation-pm/frontend/node_modules/.pnpm/react-dom@19.2.4_react@19.2.4/node_modules/react-dom/cjs/react-dom-client.development.js:16583:35)
          
    at ThrowError (/Users/flw/non-standard-automation-pm/frontend/src/components/common/__tests__/ErrorBoundary.test.jsx:18:25)
    at ErrorBoundary (/Users/flw/non-standard-automation-pm/frontend/src/components/common/ErrorBoundary.jsx:12:5)
        </pre>
      </details>
      <div
        class="flex gap-3 justify-center"
      >
        <button
          class="gap-2"
          type="button"
        >
          <svg
            class="w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          />
          重试
        </button>
        <button
          class="gap-2"
          type="button"
        >
          <svg
            class="w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          />
          返回首页
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary > Snapshot > matches snapshot with normal children 1`] = `
<div>
  Normal content
</div>
`;
